SEO: canonical domain added

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,28 @@
 <!doctype html>
 <html lang="tr">
-
 <head>
   <meta charset="utf-8">
   <title>Ajans Sağlık | Sağlık Yönetim Sistemi</title>
-  <base href="/">
+
+  <base href="/" />
+
+  <!-- SEO -->
   <meta name="description" content="Ajans Sağlık ile modern sağlık yönetimi.">
   <meta name="robots" content="index, follow">
+
+  <!-- CANONICAL (EN KRİTİK SATIR) -->
+  <link rel="canonical" href="https://ajanssağlık.com" />
+
+  <!-- Open Graph (Google & sosyal medya) -->
+  <meta property="og:title" content="Ajans Sağlık | Sağlık Yönetim Sistemi">
+  <meta property="og:description" content="Ajans Sağlık ile modern sağlık yönetimi.">
+  <meta property="og:url" content="https://ajanssağlık.com">
+  <meta property="og:type" content="website">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
   <app-root></app-root>
 </body>
-
 </html>
